# notihub

./: README.md  pyproject.toml
docs/: Makefile  index.md  requirements.txt
docs/source/: adding_notifiers.rst  api.rst  conf.py  contributing.rst  core_concepts.rst  index.rst  introduction.rst  supported_notifiers.rst  usage_examples.rst
notihub/: client.py
notihub/notifiers/aws/: notifier.py
notihub/notifiers/aws/clients/: base_aws_client.py  pinpoint_client.py  ses_client.py  sns_client.py
notipy/: client.py
notipy/notifiers/aws/: __init__.py  notifier.py
scripts/: lint.sh
src/: base_notifier.py  client.py
src/notifiers/aws/: __init__.py  notifier.py
tests/: aws_notifier_test.py  base_notifier_test.py  client_test.py  twilio_notifier_test.py
