[tool.poetry]
name = "notipy"
version = "0.1.0"
description = ""
authors = ["Juan Trujillo <juan.trujillo@alternova.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.25"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
